--- a/Demo_Login2/Content/admin_css/admin_style.css
+++ b/Demo_Login2/Content/admin_css/admin_style.css
@@ -1,7 +1,5 @@
-﻿body {
-}
-
-.tt_avt {
+﻿/*<!-- Popup -->*/
+/*.tt_avt {
     grid-area: a;
 }
 
@@ -20,13 +18,12 @@
 .grid {
     display: grid;
     grid-template-areas:
-        'a b c'
-        'a b c'
+        'a . .'
         'd b c';
     grid-column-gap: 30px;
     grid-row-gap: 10px;
     padding: 20px;
-}
+}*/
 
 .popup_title {
     color: indianred;
@@ -35,13 +32,15 @@
 }
 
 .modal-xl {
-    max-width: 1400px;
+    max-width: 1500px;
 }
 
 input[type="radio"] {
     margin-right: 15px;
 }
+
 .no-border {
     border: none;
     box-shadow: none;
 }
+/*<!-- /.Popup -->*/
